# PAET

./: .gitignore  README.md
00_admin/: current_status.md  integrity_policy.md  project_charter.md  weekly_review.md
01_research_question/: contribution_matrix.md  research_question_brief.md
02_literature/: claims_ledger.csv  literature_registry.csv  search_log.md  source_note_template.md
03_method/: method_design_notes.md  paet_schema.md  paet_v1_ros_implementation.md  token_taxonomy.md
04_experiments/: experiment_registry.csv  paet_doorway_smoke_gate_validation.md  paet_feasibility_assessment.md  paet_logger_segment_validation.md  paet_ros_robot_validation.md  privacy_ethics.md  robot_codex_prompt_paet_ros.md  robot_platform_profile.md  robot_system_report.md  ros_topic_inventory.md
05_results/: result_registry.csv  results_notes.md
06_manuscript/: main.md  manuscript_outline.md  references.bib
07_figures_tables/: figure_registry.csv  table_registry.csv
08_submission/: cover_letter_draft.md  journal_shortlist.csv  submission_checklist.md
09_reviews_revisions/: README.md  review_response_log.csv
archive/: README.md
ros/paet_ros/: CMakeLists.txt  README.md  package.xml
ros/paet_ros/config/: paet_v1.yaml
ros/paet_ros/launch/: paet_v1.launch
ros/paet_ros/msg/: DoorwayGapDiagnostic.msg  PAETEvent.msg  PAETEventArray.msg
ros/paet_ros/scripts/: paet_doorway_gap_validation.py  paet_eval_helper.py  paet_event_logger.py  paet_geometry_tokenizer.py  paet_logger_segment_validation.py
snapshots/: README.md
tools/: check_integrity.py  (+1 more)
(+8 files in other folders)
